<resources>
    <string name="app_name">BesterLive</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="input_password">请输入密码</string>
    <string name="input_account">请输入账户</string>
    <string name="btn_text_login">登陆</string>
    <string name="text_register">还没有账号？点此注册</string>
    <string name="input_account_register">用户名（6~16位字母、数字组合）</string>
    <string name="input_password_register">密码（6~16位字母、数字组合）</string>
    <string name="input_confirm_password">确认密码（再次输入密码）</string>
    <string name="btn_text_register">注册</string>
    <string name="text_information">注册即表示同意 《BesterLive》直播条款</string>
    <string name="btn_text_finish">完成</string>
    <string name="text_avatar">头像</string>
</resources>
