<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorFullRed"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_marginLeft="5dp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_account" />

        <EditText
            android:id="@+id/et_account_register"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:hint="@string/input_account_register"
            android:maxHeight="50dp"
            android:maxLines="1" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#88cccccc"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:gravity="center"
        >
        <ImageView
            android:src="@drawable/ic_password"
            android:layout_marginLeft="5dp"
            android:layout_width="25dp"
            android:layout_height="25dp" />
        <EditText
            android:id="@+id/et_password_register"
            android:inputType="textPassword"
            android:hint="@string/input_password_register"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:maxHeight="50dp"
            android:layout_height="50dp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#88cccccc"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:gravity="center"
        >
        <ImageView
            android:src="@drawable/ic_password"
            android:layout_marginLeft="5dp"
            android:layout_width="25dp"
            android:layout_height="25dp" />
        <EditText
            android:id="@+id/et_confirm_password"
            android:inputType="textPassword"
            android:hint="@string/input_confirm_password"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:maxHeight="50dp"
            android:layout_height="50dp" />
    </LinearLayout>
    <Button
        android:id="@+id/btn_register"
        android:background="@drawable/btn_bg_red_round_corner"
        android:text="@string/btn_text_register"
        android:textSize="20sp"
        android:textColor="@color/color99Red"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/text_information"
        android:textColor="@color/clolrBlue"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>